fixed card text overflow. setted loadmore button to hide and show

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
 .card-title {
   margin: auto;
   margin: 5%;
+  overflow-x: auto;
 }
 .card-link {
   margin: auto;
